--- a/processATM.html
+++ b/processATM.html
@@ -81,7 +81,7 @@
         </div>
         <div class="spinner" id="spinner"></div>
         <div id="message"></div>
-        <a href="LoginATM.html" class="atm-button" style="text-decoration: none;">Log Out</a>
+        <a href="index.html" class="atm-button" style="text-decoration: none;">Log Out</a>
     </div>
     <script src="process.js"></script>
 </body>
