--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
             <button id="submit">Submit</button>
         </div>
     </div>
+    <script>
+  document.addEventListener('contextmenu', event => event.preventDefault());
+  document.addEventListener('keydown', event => {
+    if (event.key === 'F12' || (event.ctrlKey && event.shiftKey && event.key === 'I')) {
+      event.preventDefault();
+    }
+  });
+</script>
     <script src="login.js"></script>
 </body>
 </html>
